Fix padding on right-aligned toolbar buttons

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1025,7 +1025,7 @@ div.w2p_flash.alert {
 
     .toolbar ul:last-child {
         border-right: none;
-        padding-right: 4px;
+        padding-right: 5px;
     }
 
     .toolbar ul:first-child {
